--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -94,7 +94,10 @@
             "mScope": "Scope",
             "mDOP2": "DOP2",
             "mScope2": "Scope2",
-            "poScope": "PO Scope"
+            "poScope": "PO Scope",
+            "mSiteCondition":"Site Condition",
+            "mScopeOrderType": "Scope Order Type",
+            "mWorkFlow": "Work Flow"
         }
     },
     "footer": {
